Stop icon cutoff at 1080p
I have 16 columns. With 100% zoom at 1080p, the 16th column gets cut
off. I don't like that.

--- a/sass/columns.scss
+++ b/sass/columns.scss
@@ -78,3 +78,7 @@
 .column-title-back .icon {
   top: 50%;
 } 
+
+.js-column-nav-scroller {
+  bottom: 20px;
+}
